--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include npyscreen/CHANGELOG
 include setup.py
-include EXAMPLE.py
+include EXAMPLE*.py
 include LICENCE
-include DOCUMENTATION
-include docs
+include docs/*
+include CHANGELOG
